bug fix for footer off-screen

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
 				 1px -1px 0 #000,
 				-1px -1px 0 #000;
   }*/
-  p {
+  header p {
     margin-left: -2em;
   }
   header {
